@@ -35,6 +35,8 @@
     - 22
 "framework.save_group":
     - 22
+"framework.delete_group":
+    - 22
 "framework.add_line":
     - 22
 "framework.edit_line":
